syntax = "proto3";

package ShoppingBasket;

option go_package = "./proto;ShoppingBasket";
import "google/api/annotations.proto";

service ShoppingBasket {
	rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
		option (google.api.http) = {
			post: "/api/events"
			body: "*"
		};
	}
	rpc GetEventById(GetEventByIdRequest) returns (GetEventByIdResponse) {
		option (google.api.http) = {
			get: "/api/events/{id}"
		};
	}
	rpc CreateBasket(CreateBasketRequest) returns (CreateBasketResponse) {
		option (google.api.http) = {
			post: "/api/shoppingbaskets/{userId}/{couponCode}"
		};
	}
	rpc GetBasketById(GetBasketByIdRequest) returns (GetBasketByIdResponse) {
		option (google.api.http) = {
			get: "/api/shoppingbaskets/{basketId}"
		};
	}
	rpc CreateBasketLine(CreateBasketLineRequest) returns (CreateBasketLineResponse) {
		option (google.api.http) = {
			post: "/api/shoppingbaskets/{basketId}"
			body: "*"
		};
	}
	rpc GetBasketLineById(GetBasketLineByIdRequest) returns (GetBasketLineByIdResponse) {
		option (google.api.http) = {
			get: "/api/shoppingbaskets/{basketLineId}"
		};
	}
	rpc UpdateBasketLine(UpdateBasketLineRequest) returns (UpdateBasketLineResponse) {
		option (google.api.http) = {
			put: "/api/shoppingbaskets/{basketLineId}"
			body: "*"
		};
	}
	rpc DeleteBasketLineById(DeleteBasketLineByIdRequest) returns (DeleteBasketLineByIdResponse) {
		option (google.api.http) = {
			delete: "/api/shoppingbaskets/{basketLineId}"
		};
	}
	rpc GetBasketLinesByBasketId(GetBasketLinesByBasketIdRequest) returns (GetBasketLinesByBasketIdResponse) {
		option (google.api.http) = {
			get: "/api/shoppingbaskets/{basketId}"
		};
	}
	rpc Checkout(BasketCheckoutRequest) returns (BasketCheckoutResponse) {
		option (google.api.http) = {
			post: "/api/checkout",
			body: "*"
		};
	}
}

// Event
message Event {
	string id = 1;
	string name = 2;
	int64 date = 3;
}

message CreateEventRequest {
	string name = 1;
}

message CreateEventResponse {
	Event event = 1;
}

message GetEventByIdRequest {
	string id = 1;
}

message GetEventByIdResponse {
	Event event = 1;
}

// Basket
message Basket {
	string basket_id = 1;
	string user_id = 2;
}

message CreateBasketRequest {
	string userId = 1;
	string couponCode = 2;
}

message CreateBasketResponse {
	Basket basket = 1;
}

message GetBasketByIdRequest {
	string basketId = 1;
}

message GetBasketByIdResponse {
	Basket basket = 1;
}

// BasketLine
message BasketLine {
	string basket_line_id = 1;
	uint32 ticket_amount = 2;
	float price = 3;
	string basket_id = 4;
}

message CreateBasketLineRequest {
	string basketId = 1;
	float price = 2;
	uint32 ticket_amount = 3;
}

message CreateBasketLineResponse {
	BasketLine basket_line = 1;
}

message GetBasketLineByIdRequest {
	string basketLineId = 1;
}

message GetBasketLineByIdResponse {
	BasketLine basket_line = 1;
}

message UpdateBasketLineRequest {
	string basketLineId = 1;
	uint32 ticket_amount = 2;
	float price = 3;
}

message UpdateBasketLineResponse {
	BasketLine basket_line = 1;
}

message DeleteBasketLineByIdRequest {
	string basketLineId = 1;
}

message DeleteBasketLineByIdResponse {
	string msg = 1;
	uint32 code = 2;
}

message GetBasketLinesByBasketIdRequest {
	string basketId = 1;
}

message GetBasketLinesByBasketIdResponse {
	repeated BasketLine basket_line = 1;
}

message BasketCheckoutRequest {
	string basket_id = 1;
	string first_name = 2;
	string last_name = 3;
	string email = 4;
	string address = 5;
	string zip_code = 6;
	string city = 7;
	string country = 8;
	string user_id = 9;
	string card_number = 10;
	string card_name = 11;
	string card_expiration = 12;
	string cvv_code = 13;
}
message BasketCheckoutResponse {
	string msg = 1;
	string code = 2;
}